Stop stretching images.

--- a/sourcemash/frontend/static/scss/sourcemash.scss
+++ b/sourcemash/frontend/static/scss/sourcemash.scss
@@ -313,11 +313,8 @@ a.button-collapse.top-nav {
 
   img[src*="sourcemash"] {
     opacity: .4;
-}
-}
-
-.feed-card img {
-  height: 50%;
+    height: 50%;
+  }
 }
 
 .card {
